{
  "version": 4,
  "terraform_version": "1.1.9",
  "serial": 5,
  "lineage": "9f34863b-a0da-9889-67ca-d85b88fce258",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_backend_service",
      "name": "webserver2",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]"
    },
    {
      "mode": "managed",
      "type": "google_compute_backend_service",
      "name": "webservers-backend-service",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]"
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "http-server",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": []
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "load_balancer_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": []
    },
    {
      "mode": "managed",
      "type": "google_compute_forwarding_rule",
      "name": "webservers-loadbalancer",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]"
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "vm_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]"
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "vm_instance_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]"
    },
    {
      "mode": "managed",
      "type": "google_compute_route",
      "name": "private_network_internet_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": []
    },
    {
      "mode": "managed",
      "type": "google_compute_router",
      "name": "router",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]"
    },
    {
      "mode": "managed",
      "type": "google_compute_router_nat",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]"
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "private_network",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]"
    },
    {
      "mode": "managed",
      "type": "google_compute_target_http_proxy",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]"
    },
    {
      "mode": "managed",
      "type": "google_compute_url_map",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": []
    }
  ]
}